compiler/tests/ar/errors/noret_rettype.salam
// لغة: العربية
// توقع: E012
لايرجع دالة سيء() : صحيح:
    بينما صواب:
    نهاية
نهاية

دالة الرئيسية:
    سيء()
نهاية
